# remix-rust-web

./: .env  .gitignore  README.md  docker-compose.yml
rust-backend/: Cargo.toml  Dockerfile
rust-backend/migrations/2022-02-08-112510_add_users/: down.sql
rust-backend/migrations/2022-02-26-123032_production_areas/: down.sql  up.sql
rust-backend/migrations/2022-02-26-123033_create_scotch/: down.sql  up.sql
rust-backend/migrations/2022-02-26-123034_create_existence_statuses/: down.sql  up.sql
rust-backend/migrations/2022-02-26-123034_create_status_of_existence/: down.sql  up.sql
rust-backend/migrations/2022-02-26-123050_create_liquors/: up.sql
rust-backend/migrations/2022-02-26-123050_create_scotch/: up.sql
rust-backend/migrations/2022-03-03-144448_create_countries/: down.sql  up.sql
rust-backend/migrations/2022-03-03-150032_add_column_county_id_for_liquors/: down.sql  up.sql
rust-backend/migrations/2022-03-03-150032_add_column_liquors_table/: down.sql  up.sql
rust-backend/migrations/2022-03-04-191100_create_fields_table/: down.sql  up.sql
rust-backend/migrations/2022-03-04-191359_edit_column_contry_id_to_field_id/: down.sql  up.sql
rust-backend/migrations/2022-03-04-200646_rename_liquors_to_single_malt_wisky_list/: down.sql  up.sql
rust-backend/migrations/2022-03-05-011356_edit_column_name_to_producing_area_name_at_producting_area_table/: down.sql  up.sql
rust-backend/migrations/2022-03-06-114851_add_countries_column_producing_area_table/: down.sql  (+1 more)
rust-backend/src/: auth.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
(+113 files in other folders)
