[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.21"
r2d2 = "0.8.9"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
actix-service = "2.0.2"
alcoholic_jwt = "1.0.1"
reqwest = "0.11.9"
actix-cors = "0.5.4"

[[bin]]
name="main"
path = "./src/main.rs" 
